# ai-research-os

./: .env.example  .gitignore  README.md  prd.md  pyproject.toml
docs/v2_blueprint/: README.md  architecture_decision.md  current_system_inventory.md  development_plan.md  new_repo_guide.md  phase1_execution_plan.md
migrations/: 0001_init.sql
src/ai_research_os/agents/: base.py  registry.py
src/ai_research_os/config/: settings.py
src/ai_research_os/contracts/: base.py
src/ai_research_os/evaluation/: gates.py
src/ai_research_os/review/: discord_bot.py
src/ai_research_os/runtime/: app.py  bus.py
src/ai_research_os/storage/: sqlite.py
src/ai_research_os/workflows/: proposal_workflow.py
tests/: test_contracts.py  test_review_and_gates.py
