[project]
name = "ai-research-os"
version = "0.1.0"
description = "AI-native multi-agent research and risk system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10,<4.0",
  "discord.py>=2.4,<3.0",
  "httpx>=0.27,<1.0",
  "litellm>=1.55,<2.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=1.0,<2.0",
  "ruff>=0.11,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
